--- a/HSHacks/Base.lproj/Main.storyboard
+++ b/HSHacks/Base.lproj/Main.storyboard
@@ -34,7 +34,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Updates" image="updates" id="u1e-5L-l1D">
+                    <tabBarItem key="tabBarItem" title="Updates" image="updates.png" id="u1e-5L-l1D">
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-2"/>
                     </tabBarItem>
                     <connections>
@@ -185,7 +185,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Concierge" image="mentors" id="Z7h-1E-pvt">
+                    <tabBarItem key="tabBarItem" title="Concierge" image="mentors.png" id="Z7h-1E-pvt">
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-2"/>
                     </tabBarItem>
                 </viewController>
@@ -231,7 +231,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Guide" image="calendar" id="SMR-RC-3bh">
+                    <tabBarItem key="tabBarItem" title="Guide" image="calendar.png" id="SMR-RC-3bh">
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-2"/>
                     </tabBarItem>
                     <connections>
@@ -312,7 +312,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Chat" image="chat" id="Asx-aT-ge9">
+                    <tabBarItem key="tabBarItem" title="Chat" image="chat.png" id="Asx-aT-ge9">
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-2"/>
                     </tabBarItem>
                     <connections>
@@ -1042,11 +1042,11 @@
         </scene>
     </scenes>
     <resources>
-        <image name="calendar" width="23" height="25"/>
-        <image name="chat" width="24" height="22"/>
+        <image name="calendar.png" width="30" height="30"/>
+        <image name="chat.png" width="30" height="30"/>
         <image name="hshacksLOGO.png" width="700" height="700"/>
-        <image name="mentors" width="18" height="25"/>
-        <image name="updates" width="24" height="17"/>
+        <image name="mentors.png" width="30" height="30"/>
+        <image name="updates.png" width="30" height="30"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
